--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,16 @@
 h1 
 { 
     color:red;
+    background-color: burlywood;
+}
+
+span 
+{
+    color:aqua;
+    background-color: burlywood;
+}
+
+h2 
+{
+    color:rgb(145, 18, 9)
 }
