--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,21 +1,9 @@
-h1 
-{ 
-    color:#00ff00;
-}
-
-p
+*
 {
-    color:rgb(255,0,0);
+    color:blue;
 }
 
-button
+h1
 {
-    background-color:#ffff00;
-    color:red;
+    color: green;
 }
-
-body 
-{
-background-color:whitesmoke;
-}
-
