--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,15 +1,17 @@
-div
+p 
 {
-    color: aliceblue;
-    background-color: blue;
+    text-align: start;
+
 }
 
-.heading
+h1
 {
-    color:red;
+    text-align: center;
+    text-decoration: line-through;
 }
 
-button
+a
 {
-    background-color:green;
+    font-size: 20px;
+    text-decoration: none;
 }
