--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,14 +1,7 @@
-#qq
-{
-    font-size: 1px;
-}
 
 #ww
 {
     font-size: 16px;
-}
-
-#ee
-{
-    font-size: 32px;
+    line-height: 50px;
+    text-transform:none;
 }
