--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,25 @@
-
-#ww
-{
-    font-size: 16px;
-    line-height: 50px;
-    text-transform:none;
+*
+ {                                 /* its recommende to write universal selector in top, so that we know*/
+font-family: 'Times New Roman';    /*which elements have same styling */
 }
+
+
+h1
+{
+    text-align: center;
+    text-transform: capitalize;
+}
+
+#outer 
+{
+    font-size: 25px;
+    color: red;
+}
+
+#inner
+{
+    font-size: 10px;
+    color: black;
+}
+
+
