--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,11 @@
 div 
+
 {
-    background-color: pink;
-    height:30px;
-    width:260px;
-    border: 3px solid black;
+    height: 100px;
+    width:100px;
+    background-color: aqua;
+    text-align: center;
+    border:2px solid black;
+    padding: 5px 5px 10px 10px;
+    margin: 50px;
 }
