--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,34 @@
-div 
-
+#qq
 {
     height: 100px;
-    width:100px;
-    background-color: aqua;
-    text-align: center;
-    border:2px solid black;
-    padding: 5px 5px 10px 10px;
-    margin: 50px;
+    width: 100px;
+    background-color: green;
+    border: 2px solid black;
+    border-radius: 50%;
+}
+
+#ww
+{
+    background-color:#232f3e;
+    height:30px;
+    color:white;
+    
+}
+
+#ee
+{
+    display: inline;
+}
+
+#rr
+{
+    color:#febd69;
+    display: inline;
+}
+
+#tt
+{
+    color: white;
+    background-color:#febd69;
+
 }
