--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,20 +1,8 @@
-#parent
+div
 {
-    height: 100px;
-    width:200px;
-    background-color: aqua;
-    padding:10px;
-    margin:50px;
-    border:10px solid black;
-}
+background-color: aqua;
+display: inline-block;
+height:100vh;
+width:100vw;
 
-#child
-{
-    height: 100%;
-    width:50%;
-    background-color: blue;
-    padding:2%;
-    margin:5%;
-    border:2px solid black;
-  
-}    
+}
