--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,42 @@
+h1
+{
+    text-align: center;
+    text-decoration: underline;
+}
+
 div
 {
-background-color: aqua;
-display: inline-block;
-height:100vh;
-width:100vw;
-
+    height:100px;
+    width:100px;
+    border: 2px solid black;
+    display:inline-block;
 }
+
+#box1
+{
+    background-color: aqua;    
+    position:static;
+}
+
+#box2
+{
+    background-color:blanchedalmond;
+    position:relative;
+    top:10px;
+}
+
+#box3
+{
+    background-color:green;
+    position: absolute;
+    top: 20px;
+}
+
+#box4
+{
+    background-color: yellow;
+    position: fixed;
+    bottom:0;
+    width:100%;
+}
+
