--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,7 +15,7 @@ div
 #box1
 {
     background-color: aqua;    
-    position:static;
+    /* position:static; */
 }
 
 #box2
@@ -28,15 +28,15 @@ div
 #box3
 {
     background-color:green;
-    position: absolute;
-    top: 20px;
+    position:absolute;
+    top:20px;
 }
 
 #box4
 {
     background-color: yellow;
     position: fixed;
-    bottom:0;
-    width:100%;
+    top:0;
+    width:100vw;
 }
 
