--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,40 +1,43 @@
-#traffic_light
+*
 {
-    height:150px;
-    width:40px ;
-    background-color:rgb(51, 47, 47);
-    border: 2px solid whitesmoke;
+    text-align: center;
 }
 
-#red
+div
 {
-    background-color: red;
-    height:30px;
-    width:30px;
-    border:2px solid black ;
-    border-radius: 50%;
-    margin-left: 2px;
-    margin-top: 2px;
+    height: 100px;
+    width: 100px;
+    display:inline-block;
+    border: 2px solid black;
 }
 
-#yellow
+#container
 {
-    background-color: yellow;
-    height:30px;
-    width:30px;
-    border:2px solid black ;
-    border-radius: 50%;
-    margin-left: 2px;
-    margin-top: 2px;
+    width: 800px;
+    height: 200px;
 }
 
-#green
+#box1
 {
-    background-color: green;
-    height:30px;
-    width:30px;
-    border:2px solid black ;
-    border-radius: 50%;
-    margin-left: 2px;
-    margin-top: 2px;
+    background-color: aqua;
+}
+
+#box2
+{
+    background-color: rgb(90, 90, 231);
+}
+
+#box3
+{
+    background-color: chartreuse;
+}
+
+#box4
+{
+    background-color: chocolate;
+}
+
+#box5
+{
+    background-color: cyan;
 }
