--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,20 +5,23 @@
 
 div
 {
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 50px;
     display:inline-block;
     border: 2px solid black;
 }
 
 #container
 {
-    width: 500px;
-    height: 800px;
+    width: 200px;
+    height: 500px;
     display: flex;
+    flex-wrap: wrap;
     flex-direction:row;
     justify-content:center;
-    flex-wrap:wrap;
+    align-items:end;
+    align-content: center;
+    
 }
 
 #box1
