--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,39 +13,49 @@ div
 
 #container
 {
-    width: 200px;
+    width: 500px;
     height: 500px;
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     flex-direction:row;
     justify-content:center;
-    align-items:end;
-    align-content: center;
+    /* align-items:center; */
+    /* align-content: center; */
     
 }
 
 #box1
 {
     background-color: aqua;
+    /* align-self: center; */
+    flex-grow: 1;
+
     
 }
 
 #box2
 {
     background-color: rgb(90, 90, 231);
+    flex-grow: 1;
+
 }
 
 #box3
 {
     background-color: chartreuse;
+    flex-grow: 1;
+
 }
 
 #box4
 {
     background-color: chocolate;
+    flex-grow: 1;
+
 }
 
 #box5
 {
     background-color: cyan;
+    flex-grow: 1;
 }
