--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,61 +1,86 @@
 *
 {
-    text-align: center;
+    padding: 0px;
+    margin: 0px;
+    font-size: 25px;
 }
 
-div
-{
-    height: 50px;
-    width: 50px;
-    display:inline-block;
-    border: 2px solid black;
+a{
+    text-decoration: none;
 }
 
-#container
+#navbar
 {
-    width: 500px;
-    height: 500px;
+    background-color:#0f1111;
+    position: fixed;
+    top: 0px;
+    width: 100vw;
+    height: 60px;
     display: flex;
-    /* flex-wrap: wrap; */
-    flex-direction:row;
-    justify-content:center;
-    /* align-items:center; */
-    /* align-content: center; */
-    
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
-#box1
+button{
+    background-color:#f08804;
+    height: 35px;
+    width: 80px;
+    font-size: 15px;
+}
+
+#Searchspace{
+    font-size: 15px;
+    height: 30px;
+    color: black;
+    width: 200px;
+}
+
+#Logo
 {
+ color: #f08804;
+ flex-grow: 1;
+}
+
+#Account
+{
+    color: white;
+    flex-grow: 1;
+}
+
+#Cart
+{
+    color: white;
+    flex-grow: 1;
+
+}
+
+#Contact
+{
+    color: white;
+    flex-grow: 1;
+
+}
+
+
+#outer
+{
+    height: 200px;
+    width: 200px;
     background-color: aqua;
-    /* align-self: center; */
-    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-left: 40vw;
+}
 
+#inner
+
+{
+    height: 100px;
+    width: 100px;
+    background-color:whitesmoke;
+}
     
-}
-
-#box2
-{
-    background-color: rgb(90, 90, 231);
-    flex-grow: 1;
-
-}
-
-#box3
-{
-    background-color: chartreuse;
-    flex-grow: 1;
-
-}
-
-#box4
-{
-    background-color: chocolate;
-    flex-grow: 1;
-
-}
-
-#box5
-{
-    background-color: cyan;
-    flex-grow: 1;
-}
