--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,8 +23,8 @@ a{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content:space-around;
-    align-items: center;
+    /* justify-content:space-around; */
+    /* align-items: center; */
     list-style-type: none;
 
 }
@@ -47,6 +47,13 @@ button{
 {
     color:#f08804;
 }
+
+/* For adding search bar and serach button we will go through this way now: */
+
+#item1,#item2,#item3,#item4{
+    flex-grow: 1;
+}
+
 
 /* Solution 2 */
 
