--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,79 +1,10 @@
-/* Solution 1 */
-
-
-*
-{
-    padding: 0px;
-    margin: 0px;
-    font-size: 25px;
-    color: white;
-}
-
-a{
-    text-decoration: none;
-}
-
-.navbar
-{
-    background-color:#0f1111;
-    position: fixed;
-    top: 0px;
-    width: 100vw;
-    height: 60px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    /* justify-content:space-around; */
-    /* align-items: center; */
-    list-style-type: none;
-
-}
-
-button{
-    background-color:#f08804;
-    height: 35px;
-    width: 80px;
-    font-size: 15px;
-}
-
-#Searchspace{
-    font-size: 15px;
-    height: 30px;
-    color: black;
-    width: 200px;
-}
-
-#Logo
-{
-    color:#f08804;
-}
-
-/* For adding search bar and serach button we will go through this way now: */
-
-#item1,#item2,#item3,#item4{
-    flex-grow: 1;
-}
-
-
-/* Solution 2 */
-
-#outer
-{
-    height: 200px;
-    width: 200px;
-    background-color: aqua;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-left: 40vw;
-}
-
-#inner
-
+div
 {
     height: 100px;
     width: 100px;
-    background-color:whitesmoke;
+    background-color: pink;
 }
+@media (min-width:100px) and (max-width:600px) {
+    div { background-color: red;}
     
+}
