--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,24 @@
+
 div
 {
+    text-align: center;
     height: 100px;
-    width: 100px;
-    background-color:cadetblue;
+    width: 150px;
+    background-color:rgb(133, 251, 255);
     border:2px solid black;
+    /* transition-property: all;
+    transition-duration: 2s;
+    transition-timing-function: linear;
+    transition-delay: 1ms; */
+
+    transition: all 1s linear 1ms;
 }
+
+div:hover
+{
+    background-color: red;
+    color: white;
+    font-size: 20px;
+}
+
+div:active{ background-color: pink;}
