--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,12 +6,15 @@ div
     width: 150px;
     background-color:rgb(133, 251, 255);
     border:2px solid black;
+    position: fixed;
+    top:300px;
+    left:500px;
+    
     /* transition-property: all;
     transition-duration: 2s;
     transition-timing-function: linear;
     transition-delay: 1ms; */
-
-    transition: all 1s linear 1ms;
+    /* transition: all 1s linear 1ms; */
 }
 
 div:hover
@@ -19,6 +22,13 @@ div:hover
     background-color: red;
     color: white;
     font-size: 20px;
+    /* transform: rotate(180deg); */
+    transform:scale(0.5);
+
+
 }
 
-div:active{ background-color: pink;}
+div:active
+{ 
+    background-color: green;
+}
