--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,12 +19,13 @@ div
 
 div:hover
 {
-    background-color: red;
+    /* background-color: red;
     color: white;
-    font-size: 20px;
+    font-size: 20px; */
     /* transform: rotate(180deg); */
-    transform:scale(0.5);
-
+    /* transform:scale(0.5); */
+    transition: all 2s linear 1ms;
+    transform:skew(90DEG);
 
 }
 
