--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,30 +6,31 @@ div
     width: 150px;
     background-color:rgb(133, 251, 255);
     border:2px solid black;
-    position: fixed;
-    top:300px;
-    left:500px;
-    
-    /* transition-property: all;
-    transition-duration: 2s;
-    transition-timing-function: linear;
-    transition-delay: 1ms; */
-    /* transition: all 1s linear 1ms; */
+    /* position: fixed;
+    top:250px;
+    left:550px; */
+    animation-name: positionanimate;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+    animation-direction:alternate-reverse;
 }
 
-div:hover
+@keyframes  positionanimate
 {
-    /* background-color: red;
-    color: white;
-    font-size: 20px; */
-    /* transform: rotate(180deg); */
-    /* transform:scale(0.5); */
-    transition: all 2s linear 1ms;
-    transform:skew(90DEG);
-
+    from
+    {
+        /* background-color: blue; */
+        position: relative;
+        left:0px;
+    }
+    to
+    {
+        /* background-color: blueviolet; */
+        position: relative;
+        left: 200px;
+    }
+    
 }
 
-div:active
-{ 
-    background-color: green;
-}
