--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,13 +4,13 @@ div
     text-align: center;
     height: 100px;
     width: 150px;
-    background-color:rgb(133, 251, 255);
+    background-color:rgb(0, 0, 0);
     border:2px solid black;
     /* position: fixed;
     top:250px;
     left:550px; */
     animation-name: positionanimate;
-    animation-duration: 2s;
+    animation-duration: 3s;
     animation-timing-function: linear;
     animation-delay: 1s;
     animation-iteration-count: infinite;
@@ -19,17 +19,35 @@ div
 
 @keyframes  positionanimate
 {
-    from
+    0%
     {
         /* background-color: blue; */
         position: relative;
         left:0px;
     }
-    to
+
+    25%
+    {
+        background-color: red;
+    }
+
+    50%
+    {
+        background-color: green;
+
+    }
+
+    75%
+    {
+        background-color: blue;
+
+    }
+
+    100%
     {
         /* background-color: blueviolet; */
         position: relative;
-        left: 200px;
+        left: 85vw;
     }
     
 }
