--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,54 +1,31 @@
+*
+{
+    padding: 0px;
+    margin: 0px;
+
+}
 
 div
 {
-    text-align: center;
-    height: 100px;
-    width: 150px;
-    background-color:rgb(0, 0, 0);
-    border:2px solid black;
-    /* position: fixed;
-    top:250px;
-    left:550px; */
-    animation-name: positionanimate;
-    animation-duration: 3s;
+    background-color: rgb(255, 238, 0);
+    height: 50px;
+    width: 50px;
+    padding: 20px;
+    margin: 20px;
+    border: 2px solid black;
+    border-top: 5px;
+    border-radius: 50%;
+    /* Animation Properties */
+    animation-name: spin;
+    animation-duration: 5s;
     animation-timing-function: linear;
     animation-delay: 1s;
     animation-iteration-count: infinite;
-    animation-direction:alternate-reverse;
+    animation-direction: normal ;
 }
 
-@keyframes  positionanimate
+@keyframes spin 
 {
-    0%
-    {
-        /* background-color: blue; */
-        position: relative;
-        left:0px;
-    }
-
-    25%
-    {
-        background-color: red;
-    }
-
-    50%
-    {
-        background-color: green;
-
-    }
-
-    75%
-    {
-        background-color: blue;
-
-    }
-
-    100%
-    {
-        /* background-color: blueviolet; */
-        position: relative;
-        left: 85vw;
-    }
-    
+    from{transform: rotate(0deg);}
+    to{transform: rotate(360deg);}
 }
-
