--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,21 +7,16 @@
 
 div
 {
-    background-color: rgb(255, 238, 0);
     height: 50px;
     width: 50px;
     padding: 20px;
     margin: 20px;
-    border: 2px solid black;
-    border-top: 5px;
+    border: 5px solid #343434;
+    border-left: 5px solid 	#fdee00;
     border-radius: 50%;
     /* Animation Properties */
-    animation-name: spin;
-    animation-duration: 5s;
-    animation-timing-function: linear;
-    animation-delay: 1s;
-    animation-iteration-count: infinite;
-    animation-direction: normal ;
+    animation:spin 0.8s ease-in 1s infinite normal;
+    
 }
 
 @keyframes spin 
